--- a/tickets.html
+++ b/tickets.html
@@ -4,31 +4,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style2.css">
-        <title> Welcome home </title>
+        <link rel="stylesheet" href="css/style.css">
+        <title> Buy tickets now! </title>
     </head>
     <body>
+
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
               <i class="bx bx-menu"></i>
             </label>
             <label class="logo">Throttle.</label>
-            <div class="container">
-                <div id="item1">Saturday 6th May</div>
-                <div id="item2">Friday 12th May</div>
-                <div id="item3">Tuesday 23rd May</div>
-                <div id="item4">Saturday 27th May</div>
-                <div id="item5">Saturday 4th June</div>
-                <!---class="item" if not fixable return.-->
-            </div>
             <ul>
-              <li><a href="index.html" class="active">home</a></li>
+              <li><a href="index.html">home</a></li>
               <li><a href="aboutus.html">about us</a></li>
-              <li><a href="tickets.html">tickets</a></li>
+              <li><a href="tickets.html" class="active">tickets</a></li>
               <li><a href="community.html">community</a></li>
             </ul>
         </nav>
         <section></section>
+        
+
     </body>
 </html>
