--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style3.css">
+        <link rel="stylesheet" href="css/style3.css">
         <title> Welcome home </title>
     </head>
     <body>
@@ -14,21 +14,65 @@
               <i class="bx bx-menu"></i>
             </label>
             <label class="logo">Throttle.</label>
-            <div class="container">
-                <div id="item1">Saturday 6th May</div>
-                <div id="item2">Friday 12th May</div>
-                <div id="item3">Tuesday 23rd May</div>
-                <div id="item4">Saturday 27th May</div>
-                <div id="item5">Saturday 4th June</div>
-                <!---class="item" if not fixable return.-->
-            </div>
+            
             <ul>
               <li><a href="index.html" class="active">home</a></li>
               <li><a href="aboutus.html">about us</a></li>
               <li><a href="tickets.html">tickets</a></li>
               <li><a href="community.html">community</a></li>
             </ul>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="category"> AHAHAH </div>
+                <div class="heading"> The instagram caption in here
+                    <div class="author"> By <span class="name">@whoever</span> 4 days ago</div>
+                </div>
+            </div>
+            <div class="card1">
+                <div class="card-image1"></div>
+                <div class="category1"> Im going insane </div>
+                <div class="heading1"> The instagram caption in here
+                    <div class="author1"> By <span class="name1">@whoever</span> 4 days ago</div>
+                </div>
+            </div>
+            <div class="container noselect">
+                <div class="canvas">
+                  <div class="tracker tr-1"></div>
+                  <div class="tracker tr-2"></div>
+                  <div class="tracker tr-3"></div>
+                  <div class="tracker tr-4"></div>
+                  <div class="tracker tr-5"></div>
+                  <div class="tracker tr-6"></div>
+                  <div class="tracker tr-7"></div>
+                  <div class="tracker tr-8"></div>
+                  <div class="tracker tr-9"></div>
+                  <div class="tracker tr-10"></div>
+                  <div class="tracker tr-11"></div>
+                  <div class="tracker tr-12"></div>
+                  <div class="tracker tr-13"></div>
+                  <div class="tracker tr-14"></div>
+                  <div class="tracker tr-15"></div>
+                  <div class="tracker tr-16"></div>
+                  <div class="tracker tr-17"></div>
+                  <div class="tracker tr-18"></div>
+                  <div class="tracker tr-19"></div>
+                  <div class="tracker tr-20"></div>
+                  <div class="tracker tr-21"></div>
+                  <div class="tracker tr-22"></div>
+                  <div class="tracker tr-23"></div>
+                  <div class="tracker tr-24"></div>
+                  <div class="tracker tr-25"></div>
+                  <div id="card">
+                  <p id="prompt">HOVER OVER FOR A SURPRISE :D</p>
+                    <div class="title">News article or something hidden until hover<br>woooooooow</div>
+                    <div class="subtitle">
+                      Write subtitle here
+                    </div>
+                  </div>
+                </div>
+              </div>
         </nav>
         <section></section>
+        
     </body>
 </html>
