--- a/tickets.html
+++ b/tickets.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style3.css">
         <title> Buy tickets now! </title>
     </head>
     <body>
@@ -21,9 +21,45 @@
               <li><a href="tickets.html" class="active">tickets</a></li>
               <li><a href="community.html">community</a></li>
             </ul>
+            <div class="modal">
+              <form class="form">
+                <div class="payment-options">
+                  <button name="paypal" type="button"></button>
+                  <button name="apple-pay" type="button"></button>
+                  <button name="google-pay" type="button"></button>
+                  <div class="separator">
+                    <hr class="line">
+                    <p> or pay using your credit card </p>
+                    <hr class="line">
+                  </div>
+                  <div class="credit-card-info">
+                    <div class="info-container">
+                      <label for="password-field"
+                      class="input-label"> card holder full name </label>
+                      <input id="password-field"
+                      class="input-field" type="text" name="input-name"
+                      title="input title" placeholder="Enter your full name">
+                    </div>
+                    <div class="input-container">
+                      <label for="password-field"
+                      class="input-field" type="number" name="input-name" title="input title" placeholder="0000 0000 0000 0000"></label>
+                    </div>
+                    <div class="input-container">
+                      <label for="password-field"
+                      class="input-label">Expiry Date / CVV</label>
+                      <div class="split">
+                        <input id="password-field"
+                        class="input-field" type="text" name="input-name" title="expiry date" placeholder="01/23">
+                        <input id="password-field"
+                        class="input-field" type="number" name="cvv" title="CVV" placeholder="CVV">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="purchase-btn">Checkout</button>
+              </form>
+            </div>
         </nav>
         <section></section>
-        
-
     </body>
 </html>
