--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
             </ul>
             <div class="card">
                 <div class="card-image"></div>
-                <div class="category"> AHAHAH </div>
-                <div class="heading"> The instagram caption in here
-                    <div class="author"> By <span class="name">@whoever</span> 4 days ago</div>
+                <div class="category"> Green lamboghini </div>
+                <div class="heading"> The car is green yanno
+                    <div class="author"> By <span class="name">@lamboghini</span> 4 days ago</div>
                 </div>
             </div>
             <div class="card1">
                 <div class="card-image1"></div>
-                <div class="category1"> Im going insane </div>
-                <div class="heading1"> The instagram caption in here
-                    <div class="author1"> By <span class="name1">@whoever</span> 4 days ago</div>
+                <div class="category1"> Red Audi </div>
+                <div class="heading1"> CAR GO BROOM BROOM
+                    <div class="author1"> By <span class="name1">@MTRX.UK</span> 4 days ago</div>
                 </div>
             </div>
             <div class="card2">
                 <div class="card-image2"></div>
-                <div class="category2"> Im going insane </div>
-                <div class="heading2"> The instagram caption in here
-                    <div class="author2"> By <span class="name2">@whoever</span> 4 days ago</div>
+                <div class="category2"> Lamboghini Revuelto </div>
+                <div class="heading2"> If a volcano is not enough to...
+                    <div class="author2"> By <span class="name2">@lamboghini</span> 4 days ago</div>
                 </div>
             </div>
             <div class="quote-card">
@@ -73,11 +73,8 @@
                   <div class="tracker tr-24"></div>
                   <div class="tracker tr-25"></div>
                   <div id="card">
-                  <p id="prompt">HOVER OVER FOR A SURPRISE :D</p>
-                    <div class="title">News article or something hidden until hover<br>woooooooow</div>
-                    <div class="subtitle">
-                      Write subtitle here
-                    </div>
+                    <p id="prompt">HOVER FOR NEWS ARTICLE :D</p>
+                    <div class="title"> Max Verstappen: World champion casts doubt over F1 future amid concerns over schedule and format<br> - Sky Sports F1</div></a>
                   </div>
                 </div>
               </div>
