--- a/aboutus.html
+++ b/aboutus.html
@@ -4,12 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style3.css">
         <title> All about us! </title>
     </head>
 
     <body>
-
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -23,7 +22,20 @@
               <li><a href="community.html">community</a></li>
             </ul>
         </nav>
-        <section></section>
-
+        <div class="about-page"> Welcome to Throttle. A car community with well over a thousand members, all sharing the same passion of cars & going fast. _______________________________
+        We meet several times a month, display multitudes of vehicles, allow for traders to have stalls on premises. Visit some of our partner brands like <a target="_blank" href="https://www.instagram.com/forduk/?hl=en">Ford</a>, <a target="_blank" href="https://www.instagram.com/subaruuk/?hl=en">Subaru</a> and, <a target="_blank" href="https://www.slimsdetailing.co.uk/collections/cleaning">Slim's</a>. _______________________________
+        Enjoy some photos of the cars from out meets
+        </div>
+        <div class="slider">
+          <img id="img-1" src="img/car-meet-photo-5.jpg" alt="Image 1"/>
+          <img id="img-2" src="img/car-meet-photo-10.jpg" alt="Image 2"/>
+          <img id="img-3" src="img/car-meet-photo-9.jpg" alt="Image 3"/>
+        </div>
+        <div class="navigation-button">
+          <span class="dot active" onclick="changeSlide(0)"></span>
+          <span class="dot" onclick="changeSlide(1)"></span>
+          <span class="dot" onclick="changeSlide(2)"></span>
+        </div>
+        <script src="js/slider.js"></script>
     </body>
 </html>
