--- a/community.html
+++ b/community.html
@@ -4,26 +4,34 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style3.css">
         <title> Join our community </title>
     </head>
     <body>
-
-        <nav>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="bx bx-menu"></i>
-            </label>
-            <label class="logo">Throttle.</label>
-            <ul>
-              <li><a href="index.html">home</a></li>
-              <li><a href="aboutus.html">about us</a></li>
-              <li><a href="tickets.html">tickets</a></li>
-              <li><a href="community.html"class="active">community</a></li>
-            </ul>
-        </nav>
-        <section></section>
+      <div class="grid-gallery">
+        <a href="img/car-meet-photo-1.jpg"><img src="img/car-meet-photo-1.jpg"></a>
+        <a href="img/car-meet-photo-2.jpg"><img src="img/car-meet-photo-2.jpg"></a>
+        <a href="img/car-meet-photo-3.jpg"><img src="img/car-meet-photo-3.jpg"></a>
+        <a href="img/car-meet-photo-4.jpg"><img src="img/car-meet-photo-4.jpg"></a>
+        <a href="img/car-meet-photo-5.jpg"><img src="img/car-meet-photo-5.jpg"></a>
+        <a href="img/car-meet-photo-6.jpg"><img src="img/car-meet-photo-6.jpg"></a>
+        <a href="img/car-meet-photo-7.jpg"><img src="img/car-meet-photo-7.jpg"></a>
+        <a href="img/car-meet-photo-8.jpg"><img src="img/car-meet-photo-8.jpg"></a>
+        <a href="img/car-meet-photo-9.jpg"><img src="img/car-meet-photo-9.jpg"></a>
+      </div>
+      <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="bx bx-menu"></i>
+        </label>
+        <label class="logo">Throttle.</label>
+        <ul>
+          <li><a href="index.html">home</a></li>
+          <li><a href="aboutus.html">about us</a></li>
+          <li><a href="tickets.html">tickets</a></li>
+          <li><a href="community.html" class="active">community</a></li>
+        </ul>
+      </nav>
         
-
     </body>
 </html>
