--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style3.css">
+        <link rel="stylesheet" href="style3.css">
         <title> All about us! </title>
     </head>
 
@@ -27,15 +27,15 @@
         Enjoy some photos of the cars from out meets
         </div>
         <div class="slider">
-          <img id="img-1" src="img/car-meet-photo-5.jpg" alt="Image 1"/>
-          <img id="img-2" src="img/car-meet-photo-10.jpg" alt="Image 2"/>
-          <img id="img-3" src="img/car-meet-photo-9.jpg" alt="Image 3"/>
+          <img id="img-1" src="car-meet-photo-5.jpg" alt="Collection of cars"/>
+          <img id="img-2" src="car-meet-photo-10.jpg" alt="Collection of cars"/>
+          <img id="img-3" src="car-meet-photo-9.jpg" alt="Lots of cars"/>
         </div>
         <div class="navigation-button">
           <span class="dot active" onclick="changeSlide(0)"></span>
           <span class="dot" onclick="changeSlide(1)"></span>
           <span class="dot" onclick="changeSlide(2)"></span>
         </div>
-        <script src="js/slider.js"></script>
+        <script src="slider.js"></script>
     </body>
 </html>
