--- a/community.html
+++ b/community.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style3.css">
+        <link rel="stylesheet" href="style3.css">
         <title> Join our community </title>
     </head>
     <body>
       <div class="grid-gallery">
-        <a href="img/car-meet-photo-1.jpg"><img src="img/car-meet-photo-1.jpg"></a>
-        <a href="img/car-meet-photo-2.jpg"><img src="img/car-meet-photo-2.jpg"></a>
-        <a href="img/car-meet-photo-3.jpg"><img src="img/car-meet-photo-3.jpg"></a>
-        <a href="img/car-meet-photo-4.jpg"><img src="img/car-meet-photo-4.jpg"></a>
-        <a href="img/car-meet-photo-5.jpg"><img src="img/car-meet-photo-5.jpg"></a>
-        <a href="img/car-meet-photo-6.jpg"><img src="img/car-meet-photo-6.jpg"></a>
-        <a href="img/car-meet-photo-7.jpg"><img src="img/car-meet-photo-7.jpg"></a>
-        <a href="img/car-meet-photo-8.jpg"><img src="img/car-meet-photo-8.jpg"></a>
-        <a href="img/car-meet-photo-9.jpg"><img src="img/car-meet-photo-9.jpg"></a>
+        <a href="car-meet-photo-1.jpg"><img src="car-meet-photo-1.jpg"></a>
+        <a href="car-meet-photo-2.jpg"><img src="car-meet-photo-2.jpg"></a>
+        <a href="car-meet-photo-3.jpg"><img src="car-meet-photo-3.jpg"></a>
+        <a href="car-meet-photo-4.jpg"><img src="car-meet-photo-4.jpg"></a>
+        <a href="car-meet-photo-5.jpg"><img src="car-meet-photo-5.jpg"></a>
+        <a href="car-meet-photo-6.jpg"><img src="car-meet-photo-6.jpg"></a>
+        <a href="car-meet-photo-7.jpg"><img src="car-meet-photo-7.jpg"></a>
+        <a href="car-meet-photo-8.jpg"><img src="car-meet-photo-8.jpg"></a>
+        <a href="car-meet-photo-9.jpg"><img src="car-meet-photo-9.jpg"></a>
       </div>
       <nav>
         <input type="checkbox" id="check">
