--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -60,7 +61,7 @@
                 <div class="tracker tr-25"></div>
                 <div id="card">
                     <p id="prompt">NEWS ARTICLE BELOW :D</p>
-                    <div class="title"> Max Verstappen: World champion casts doubt over F1 future amid concerns over schedule and format<br> - Sky Sports F1</div></a>
+                    <div class="title"> Max Verstappen: World champion casts doubt over F1 future amid concerns over schedule and format<br> - Sky Sports F1</div>
                 </div>
             </div>
         </div>
